crates/tsuno-driver/tests/fixtures/verify_cli/pass/verifies_a_trivial_assertion_fixture.rs
#[tsuno::verify]
fn ok(x: i32) {
    //@ assert "x == x"
}

fn main() {}
